# HCDR_ML

./: .gitignore  AGENTS.md  HCDR_IK_Interactive.m  HCDR_IK_demo.m  HCDR_IK_visualize.m  HCDR_arm.m  HCDR_arm_reference_6R.csv  HCDR_config.m  HCDR_config_v2.m  HCDR_diagnose.m  HCDR_dynamics.m  HCDR_kinematics.m  HCDR_kinematics_5d.m  HCDR_main.m  HCDR_main_output.txt  HCDR_rbd.m  HCDR_statics.m  HCDR_statics_5d.m  HCDR_v2.3.md  HCDR_visualize.m  HCDR_visualize_5d.m  HCDR_workspace_analysis.m  IK_hqp.m  IMPLEMENTATION_NOTES.md  MUJOCO_LOG.TXT  README.md  SUMMARY.md  TASKBOOK.md  chat-export-2026-02-04T17-16-06.md  commit_msg.txt  config.toml  debug_statics_detailed.m  debug_statics_detailed.txt  diagnose_main_case3.m  draw_hcdr_simple.m  ik_solve_three_modes.m  output.txt  plan_arm_only.m  plan_cooperative.m  plan_platform_only.m  (+14 more)
cpp_workspace_static/: CMakeLists.txt  README.md
cpp_workspace_static/app/: main.cpp
cpp_workspace_static/config/: workspace_static.json  workspace_static_mode1_only.json  workspace_static_smoke.json  workspace_static_validation.json
cpp_workspace_static/include/: arm_pinocchio_model.h  halton_sampler.h  platform_geometry.h  platform_static_feasibility.h  point_cloud_io.h  voxel_grid.h  workspace_analyzer.h  workspace_config.h  workspace_types.h
cpp_workspace_static/output_estimate/workspace_static_20260317_212031/: mode1_ee_union_cloud.csv  mode1_ee_union_yz_projection.csv  mode1_platform_fixedpsi_45deg_gamma.csv  mode2_xy_projection.csv  mode3_union_xz_projection.csv
cpp_workspace_static/output_mode1/workspace_static_20260317_225403/: mode1_ee_union_cloud.csv  mode1_ee_union_cloud.ply  mode1_ee_union_xy_projection.csv  mode1_ee_union_yz_projection.csv  mode2_xz_projection.csv  mode2_yz_projection.csv  mode3_platform_psi_summary.csv  platform_sample_pose_diagnostics.csv
cpp_workspace_static/output_mode1/workspace_static_20260317_231005/: mode1_platform_fixedpsi_45deg_gamma.csv
cpp_workspace_static/output_mode1/workspace_static_20260317_232140/: mode1_ee_union_xz_projection.csv  mode1_platform_fixedpsi_45deg_cloud.ply  mode1_platform_psi_summary.csv
cpp_workspace_static/scripts/: build_vs2019.ps1  run_smoke.ps1
cpp_workspace_static/src/: arm_pinocchio_model.cpp  platform_geometry.cpp  platform_static_feasibility.cpp  point_cloud_io.cpp  workspace_analyzer.cpp  workspace_config.cpp
cpp_workspace_static/tests/: test_main.cpp
cpp_workspace_static_mode1/: CMakeLists.txt  README.md
cpp_workspace_static_mode1/app/: main_mode1_workspace.cpp
cpp_workspace_static_mode1/config/: workspace_static_mode1.json  workspace_static_mode1_smoke.json
cpp_workspace_static_mode1/output/workspace_static_mode1_20260327_105911/: mode1_force_only_diagnostic.txt  mode1_output_files.txt  mode1_platform_fixedpsi_45deg_gamma.csv  mode1_pose_debug_samples.csv  mode1_psi_scan_summary.csv
cpp_workspace_static_mode1/output/workspace_static_mode1_20260328_180438/: mode1_nullspace_diagnostic.txt  mode1_platform_fixedpsi_45deg_mask.csv  mode1_run_log.txt
cpp_workspace_static_mode1/output_tests/workspace_static_mode1_20260318_155651/: mode1_ee_union_bestpsi.csv  mode1_ee_union_xy_projection.csv  (+3 more)
cpp_workspace_static_mode1/scripts/: plot_wfw_boundary.py  run_smoke.ps1
cpp_workspace_static_mode1/src/: arm_pinocchio_model.cpp  arm_pinocchio_model.h  mode1_workspace_solver.cpp  mode1_workspace_solver.h  platform_geometry.cpp  platform_geometry.h  platform_static_feasibility.cpp  platform_static_feasibility.h  plot_csv_export.cpp  plot_csv_export.h  pointcloud_export.cpp  pointcloud_export.h  voxel_grid.h  workspace_config.cpp  workspace_config.h  workspace_types.h
cpp_workspace_static_mode1/tests/: test_main.cpp
(+487 files in other folders)
